MEC Dev Sandbox/MEC Dev Sandbox/src/objects/Product_Classification__c.object
<CustomObject>
    <fields>
        <fullName>Classification_Level__c</fullName>
        <label>Classification Level</label>
        <picklist>
            <picklistValues>
                <fullName>A</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>B</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>C</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>D</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Max_Price__c</fullName>
        <label>Max Price</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Min_Price__c</fullName>
        <label>Min Price</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Product_Category__c</fullName>
        <globalPicklist>Product_Category</globalPicklist>
        <label>Product Category</label>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Product__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Product</label>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>Product Classification</relationshipLabel>
        <relationshipName>Product_Classification</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Product Classification</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Product_Category__c</columns>
        <columns>Classification_Level__c</columns>
        <columns>Min_Price__c</columns>
        <columns>Max_Price__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>PC-{0000000}</displayFormat>
        <label>Product Classification Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Product Classification</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>